--- a/Primary.html
+++ b/Primary.html
@@ -23,7 +23,7 @@
     <div class="collapse navbar-collapse" id="navbarContent">
       <ul class="navbar-nav mr-avto mb-2">
         <li class="nav-item">
-          <a href="./Dark.html" class="nav-link">Home</a>
+          <a href="./index.html" class="nav-link">Home</a>
         </li>
         <li class="nav-item">
           <a href="./Primary.html" class="nav-link">Delivery</a>
