--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="collapse navbar-collapse" id="navContent">
           <ul class="navbar-nav mr-avto mb-3 mb-lg-0">
             <li class="nav-item">
-              <a href="./Dark.html" class="nav-link">Home</a>
+              <a href="./index.html" class="nav-link">Home</a>
             </li>
             <li class="nav-item">
               <a href="./Primary.html" class="nav-link">Blog</a>
