--- a/Danger.html
+++ b/Danger.html
@@ -6,8 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Danger</title>
   <!-- CSS only -->
-<link rel="stylesheet" href="/css/bootstrap.rtl.min.css">
-<link rel="stylesheet" href="style2.css">
+<link rel="stylesheet" href="./css/bootstrap.rtl.min.css">
+<link rel="stylesheet" href="./style2.css">
 </head>
 <body>
   <nav class="navbar navbar-expand-lg navbar-light bg-danger">
