--- a/Primary.html
+++ b/Primary.html
@@ -9,7 +9,7 @@
  
 
   
-<link rel="stylesheet" href="/css/bootstrap.rtl.min.css">
+<link rel="stylesheet" href="./css/bootstrap.rtl.min.css">
 </head>
 <body>
   <nav class="navbar navbar-expand-lg navbar-light bg-primary">
