--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   
   <title>Dark</title>
   <link rel="stylesheet" href="./css/bootstrap.rtl.min.css">
-  <link rel="stylesheet" href="style1.css">
+  <link rel="stylesheet" href="./style1.css">
 <body>
   <header id="header" class="fixed-top">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
